--- a/render.yaml
+++ b/render.yaml
@@ -1,5 +1,6 @@
 services:
   - name: backend
+    type: web
     image: frappe/erpnext:v15.50.0
     env:
       DB_HOST: db
@@ -18,6 +19,7 @@ services:
     restartPolicy: on-failure
 
   - name: configurator
+    type: worker
     image: frappe/erpnext:v15.50.0
     env:
       DB_HOST: db
@@ -45,6 +47,7 @@ services:
     restartPolicy: none
 
   - name: create-site
+    type: worker
     image: frappe/erpnext:v15.50.0
     entryPoint:
       - bash
@@ -76,6 +79,7 @@ services:
     restartPolicy: none
 
   - name: db
+    type: db
     image: mariadb:10.6
     env:
       MYSQL_ROOT_PASSWORD: admin
@@ -95,6 +99,7 @@ services:
     restartPolicy: on-failure
 
   - name: frontend
+    type: web
     image: frappe/erpnext:v15.50.0
     env:
       BACKEND: backend:8000
@@ -117,6 +122,7 @@ services:
     restartPolicy: on-failure
 
   - name: queue-long
+    type: worker
     image: frappe/erpnext:v15.50.0
     command:
       - bench
@@ -131,6 +137,7 @@ services:
     restartPolicy: on-failure
 
   - name: queue-short
+    type: worker
     image: frappe/erpnext:v15.50.0
     command:
       - bench
@@ -145,6 +152,7 @@ services:
     restartPolicy: on-failure
 
   - name: redis-queue
+    type: db
     image: redis:6.2-alpine
     volumes:
       - name: redis-queue-data
@@ -152,10 +160,12 @@ services:
     restartPolicy: on-failure
 
   - name: redis-cache
+    type: db
     image: redis:6.2-alpine
     restartPolicy: on-failure
 
   - name: scheduler
+    type: worker
     image: frappe/erpnext:v15.50.0
     command:
       - bench
@@ -168,6 +178,7 @@ services:
     restartPolicy: on-failure
 
   - name: websocket
+    type: worker
     image: frappe/erpnext:v15.50.0
     command:
       - node
